--- a/package.json
+++ b/package.json
@@ -22,13 +22,14 @@
   "dependencies": {
     "@ant-design/pro-layout": "^6.5.0",
     "@umijs/preset-react": "1.x",
-    "umi": "^3.4.6",
     "ahooks": "^2.9.6",
     "classnames": "^2.2.6",
-    "echarts": "^5.0.2"
+    "echarts": "^5.0.2",
+    "umi": "^3.4.6"
   },
   "devDependencies": {
     "@types/classnames": "^2.2.11",
+    "@types/lodash": "^4.14.168",
     "@types/query-string": "^6.3.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
