--- a/.env
+++ b/.env
@@ -5,9 +5,11 @@ INTEGRATION_WINDOW=rootWindow
 
 RUNTIME_NAMESPACE=default
 RUNTIME_API_DATALAB_MODELER=//dicastal.api.kstonedata.k2/datalab/modeler/api/v2
-RUNTIME_API_DATA_SERVICE=//dicastal.api.kstonedata.k2/data-service/modeler/api/v2
 RUNTIME_API_K2ASSETS=//dicastal.api.kstonedata.k2/asset-modeling-service/api/v2
+RUNTIME_API_DATA_SERVICE=//dicastal.api.kstonedata.k2/data-service/modeler/api/v2
 RUNTIME_API_INFLUXDB=//dicastal.influxdb.kstonedata.k2
-RUNTIME_API_GATEWAY=//192.168.130.70:8081
-
 RUNTIME_MINIO=//dicastal.minio.kstonedata.k2
+
+
+
+RUNTIME_API_GATEWAY=//localhost:3100
